# riia-cowork-apr-demo

./: .env.example  .gitignore  DEMO_CHECKLIST.md  Dockerfile  README.md  RITA_Example_Workflows.md  SETUP.md  UI-Improvements.txt  activate-env.ps1.example  dashboard-data-pipeline.md  docker-compose.yml  eod-data-refresh.md  model_result.md  production_ready.md  project-report.md  pyproject.toml  run_api.py  run_pipeline.py  run_ui.py  test_steps5to8.py  verify.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: claude_desktop_config.json.example
dashboard/: ds.html  fno-manoeuvre.js  fno.html  index.html  ops.html  rita.html
scripts/: daily_man_snapshot.ps1  prepare_asml.py  prepare_banknifty.py  prepare_nvda.py
src/: RITA_Cowork_Architecture.md
src/rita/: __init__.py  config.py
src/rita/core/: __init__.py  chat_monitor.py  classifier.py  data_loader.py  drift_detector.py  goal_engine.py  hedge_analyzer.py  performance.py  portfolio_manager.py  risk_engine.py  rl_agent.py  shap_explainer.py  strategy_engine.py  technical_analyzer.py  training_tracker.py
src/rita/interfaces/: __init__.py  mcp_server.py  python_client.py  rest_api.py  streamlit_app.py
src/rita/orchestration/: __init__.py  monitor.py  session.py  workflow.py
tests/: test_core.py
